// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commonjs > require destructure 1`] = `
Object {
  "mod": Array [
    "a",
  ],
}
`;

exports[`commonjs > require property 1`] = `
Object {
  "mod": Array [
    "a",
  ],
}
`;

exports[`ignores unused imports 1`] = `
Object {
  "mod": Array [],
}
`;

exports[`modules > default imports 1`] = `
Object {
  "mod": Array [
    "default",
  ],
}
`;

exports[`modules > named imports 1`] = `
Object {
  "mod": Array [
    "a",
  ],
}
`;

exports[`modules > namespace imports 1`] = `
Object {
  "mod": Array [
    "b",
  ],
}
`;
